test/classes/initializers/generics/phase1/enumFieldNoUseBad.good
enumFieldNoUseBad.chpl:8: In initializer:
enumFieldNoUseBad.chpl:9: error: 'blue' undeclared (first use this function)
